--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "alixir",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.21.1",
