--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,21 @@
 {
     "version": 2,
-    "public": true,
+    "public":true,
     "builds": [{
         "src": "./server.js",
         "use": "@vercel/node"
+    },
+    {
+          "src": "/**",
+          "use": "@vercel/static"
     }],
-    "routes": [{"src": "/(.*)", "dest": "server.js"}]
+    "routes": [
+        {
+            "src": "/(.*)", 
+            "dest": "server.js"
+        },{
+      "src": "/(.+\\.[a-z]+)$",
+      "dest": "/$1"
+        }
+    ]
 }
