--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,4 @@
 {
-    "version": 2,
-    "public":true,
-    "builds": [{
-        "src": "./server.js",
-        "use": "@vercel/node"
-    },
-    {
-          "src": "/**",
-          "use": "@vercel/static"
-    }],
-    "routes": [
-        {
-            "src": "/(.*)", 
-            "dest": "server.js"
-        },{
-      "src": "/(.+\\.[a-z]+)$",
-      "dest": "/$1"
-        }
-    ]
+	"version": 2,
+	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
